# nomad-aa-plugin

./: 404.html  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
nomad-aa-plugin/: .cruft.json  LICENSE  MANIFEST.in
nomad-aa-plugin/docs/: index.md
nomad-aa-plugin/src/nomad_aa_plugin/parsers/: __init__.py  parser.py
nomad-aa-plugin/src/nomad_aa_plugin/schema_packages/: schema_package.py
nomad-aa-plugin/tests/data/: test.archive.yaml
nomad-aa-plugin/tests/parsers/: test_parser.py
reference/: references.html
search/: search_index.json
src/nomad_aa_plugin/parsers/: __init__.py  parser.py
src/nomad_aa_plugin/schema_packages/: __init__.py  schema_package.py
tests/apps/: test_app.py
tests/data/: aa.archive.json  myfile.newmainfilename  test.csv
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
